Removed Handler.java Worked on Setup